fix issue with buttons overflow in mobile on portfolio page

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1414,6 +1414,7 @@ $email-height: 30px;
   flex-grow: 1;
   max-height: 40px;
   position: relative;
+  min-width: fit-content;
   bottom: -0.3em;
 }
 .port_btn-container .btn-line-color1 {
